# DSBplot

./: .gitignore  LICENSE  OLD.md  README.md  Todo.txt  comparison.py  graph.py  histogram.py  install_deps.ps1  layout.py  pptx1.py  preprocess.py  pyproject.toml  requirements.txt  run.ps1  run_2.ps1  run_HEK.ps1  run_OX.ps1  run_demo.ps1  scratch.py
0_generate_scripts/: dsb_pos.tsv  generate_00_bowtie2_align.py  generate_01_filter_nhej.py  generate_02_combine_repeat.py  generate_03_get_window.py  generate_04_graph_data.py  generate_05_histogram_data.py  generate_06_precomputed_layout.py  generate_07_plot_graph.py  generate_08_plot_histogram.py  generate_09_pptx_graph.py  generate_10_pptx_histogram.py  generate_11_library_summary.py  generate_all.ps1  generate_all.sh  generate_constants.py  library_info.tsv  min_read_length.tsv  total_reads.tsv
1_process_nhej/: combine_repeat.py  filter_nhej.py
2_get_window_data/: alignment_window.py  get_freq.py  get_freq_comparison.py  get_merged.py  get_window.py  remove_substitution.py
3_get_graph_data/: get_graph_data.py
4_get_histogram_data/: get_histogram_data.py
5_plot_graph/: get_precomputed_layout.py  plot_graph.py  plot_graph_helper.py
6_plot_histogram/: plot_histogram.py
7_get_pptx/: get_pptx.py  get_pptx_legend.py  template.pptx
data/0_fastq/: db1_R2.fq  db2_R2.fq  db3_R1.fq  dcmv2_R2.fq  dcmv3_R1.fq  dcmv3_R2.fq  dcmv4_R1.fq  dcmv4_R2.fq  sense1_R1.fq  sense1_R2.fq  sense2_R2.fq  sense4_R2.fq
data/0_ref_seq/: 1DSB_R2_branch.fa  2DSBanti_R2_antisense_new.fa
data_HEK/input/ref_seq/: 1DSB_R1_sense.fa
data_OX/input/ref_seq/: 2DSB_R1_branch.fa  2DSB_R1_cmv.fa  2DSBanti_R1_splicing_new.fa
data_demo/input/fastq/: db2_R1.fq  db3_R2.fq  db4_R1.fq  db4_R2.fq
data_demo/input/ref_seq/: 2DSBanti_R1_antisense_old.fa
data_input/fastq/ref_seq/: 1DSB_R1_branch.fa  1DSB_R1_cmv.fa  1DSB_R2_cmv.fa  1DSB_R2_sense.fa  2DSB_R1_sense.fa  2DSBanti_R2_splicing_old.fa
data_input/ref_seq/: 2DSBanti_R1_splicing_old.fa  2DSBanti_R2_antisense_old.fa
demo/: run.ps1
demo_long/: .gitignore  run.ps1  run.sh
demo_long/input/fastq/: BranchD_R1_1.fq  Sense_R2_3.fq
demo_long/input/ref_seq/: 2DSB_Sense_R2.fa  2DSB_pCMVD_R2.fa
demo_short/: .gitignore  run.ps1  run.sh
demo_short/data/input/: run.ps1
demo_short/input/fastq/: sense2_R1.fq  sense4_R1.fq
demo_short/input/sam/: Sense_R1_1.sam  Sense_R1_3.sam
figures/: figures.pptx  graph_layout_scheme.pptx
get_graph_data/: get_graph_data.py
get_nhej_data/: .gitignore  combine_repeat.py
get_pptx/: get_pptx.py  get_pptx_helpers.py
get_window_data/: alignment_window.py  get_freq_comparison.py  get_merged.py
plot_graph/: plot_graph.py
src/DSBplot/: __main__.py  comparison.py  concat.py  graph.py  histogram.py  pptx1.py  preprocess.py  process.py
src/DSBplot/get_graph_data/: get_graph_data.py
src/DSBplot/get_histogram_data/: get_histogram_data.py  get_variation.py
src/DSBplot/get_nhej_data/: combine_repeat.py  (+1 more)
test/: run.ps1  run.sh
test/integration/: .gitignore  test_filter_nhej.py  test_preprocess.py  test_process.py
test/unit/: test_read_seq.py
utils/: alignment_utils.py  common_utils.py  constants.py  fasta_utils.py  file_names.py  file_utils.py  graph_utils.py  kmer_utils.py  library_constants.py  log_utils.py  sam_utils.py
(+97 files in other folders)
