[project]
name = "dsbplot"
version = "0.0.1"
authors = [
  { name="Tejasvi Channagiri", email="tchannagiri@gmail.com" },
]
description = "A package for visualizing alignment variations in DNA-seq data from double-strand break (DSB) experiments."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tchannagiri/DSBplot"
"Bug Tracker" = "https://github.com/tchannagiri/DSBplot/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dsbplot.get_pptx" = ["template.pptx"]