[project]
name = "DSBplot"
version = "0.1.0"
authors = [
  { name="Tejasvi Channagiri", email="tchannagiri@gmail.com" },
]
description = "A package for visualizing alignment variations in DNA-seq data from double-strand break (DSB) experiments."
keywords = ["visualization", "genomics", "DNA-seq", "DSB", "double-strand break", "alignment", "graph", "histogram"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "Levenshtein",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "Pillow",
  "plotly",
  "scikit-learn",
]

[project.urls]
"Homepage" = "https://github.com/tchannagiri/DSBplot"
"Bug Tracker" = "https://github.com/tchannagiri/DSBplot/issues"

[project.scripts]
DSBplot = "DSBplot.__main__:entry_point"
DSBplot-process = "DSBplot.process:entry_point"
DSBplot-graph = "DSBplot.graph:entry_point"
DSBplot-histogram = "DSBplot.histogram:entry_point"
DSBplot-concat = "DSBplot.concat:entry_point"

[tool.setuptools.packages.find]
where = ["src"]
